--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ fastapi = "^0.78.0"
 uvicorn = "^0.17.6"
 aiohttp = "^3.8.1"
 psycopg2 = "^2.9.3"
+python-dotenv = "^0.20.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
