--- a/.env
+++ b/.env
@@ -1,6 +1,2 @@
 # Development settings
-DB_USER="postgres"
-DB_PASSWORD="postgres"
-DB_HOST="localhost"
-DB_PORT=5432
-DB_NAME="coodesh"
+DATABASE_URL="postgres://postgres:postgres@postgres:5432/coodesh"
