--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-# Development settings
-DATABASE_URL="postgres://postgres:postgres@postgres:5432/coodesh"
+# Settings
+DB_URL="postgresql://postgres:postgres@localhost:5432/coodesh"
