--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ uvicorn = "^0.17.6"
 aiohttp = "^3.8.1"
 psycopg2 = "^2.9.3"
 python-dotenv = "^0.20.0"
+sqlmodel = "^0.0.6"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
