--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ aiohttp = "^3.8.1"
 psycopg2 = "^2.9.3"
 python-dotenv = "^0.20.0"
 sqlmodel = "^0.0.6"
+httpx = "^0.23.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
