--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ psycopg2 = "^2.9.3"
 python-dotenv = "^0.20.0"
 sqlmodel = "^0.0.6"
 httpx = "^0.23.0"
+APScheduler = "^3.9.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
