--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 aiohttp==3.8.1; python_version >= "3.6"
 aiosignal==1.2.0; python_version >= "3.6"
 anyio==3.6.1; python_version >= "3.7" and python_full_version >= "3.6.2"
+apscheduler==3.9.1; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0" and python_version < "4")
 asgiref==3.5.2; python_version >= "3.7"
 async-timeout==4.0.2; python_version >= "3.6"
 attrs==21.4.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
@@ -19,12 +20,17 @@ multidict==6.0.2; python_version >= "3.7"
 psycopg2==2.9.3; python_version >= "3.6"
 pydantic==1.9.1; python_full_version >= "3.6.1" and python_full_version < "4.0.0"
 python-dotenv==0.20.0; python_version >= "3.5"
+pytz-deprecation-shim==0.1.0.post0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version < "4" and python_version >= "3.6"
+pytz==2022.1; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version < "4"
 rfc3986==1.5.0; python_version >= "3.7"
+six==1.16.0; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version < "4"
 sniffio==1.2.0; python_version >= "3.7" and python_full_version >= "3.6.2"
 sqlalchemy2-stubs==0.0.2a22; python_full_version >= "3.6.1" and python_full_version < "4.0.0" and python_version >= "3.6"
 sqlalchemy==1.4.37; python_full_version >= "3.6.1" and python_full_version < "4.0.0"
 sqlmodel==0.0.6; python_full_version >= "3.6.1" and python_full_version < "4.0.0"
 starlette==0.19.1; python_version >= "3.6" and python_full_version >= "3.6.1"
 typing-extensions==4.2.0; python_full_version >= "3.6.1" and python_full_version < "4.0.0" and python_version >= "3.7"
+tzdata==2022.1; python_version >= "3.6" and python_full_version < "3.0.0" and platform_system == "Windows" or python_full_version >= "3.6.0" and python_version < "4" and python_version >= "3.6" and platform_system == "Windows"
+tzlocal==4.2; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version < "4" and python_version >= "3.6"
 uvicorn==0.17.6; python_version >= "3.7"
 yarl==1.7.2; python_version >= "3.6"
