--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 # Settings
-DB_URL="postgresql://postgres:postgres@localhost:5432/coodesh"
+DB_URL=postgresql://postgres:postgres@localhost:5432/coodesh
